@@ -1,3 +1,11 @@
+2019-04-12  Kelvin Nilsen  <kelvin@gcc.gnu.org>
+
+	PR target/87532
+	* config/rs6000/rs6000.c (rs6000_split_vec_extract_var): Use inner
+	mode of vector rather than mode of destination for move instruction.
+	* config/rs6000/vsx.md (*vsx_extract_<mode>_<VS_scalar>mode_var):
+	Use QI inner mode with V16QI vector mode.
+
 2019-04-12  Jakub Jelinek  <jakub@redhat.com>
 
 	PR target/52726
